added dashboard redirect & fixed the outstanding issues

--- a/public/sass/partials/_variables.scss
+++ b/public/sass/partials/_variables.scss
@@ -7,12 +7,14 @@ $lavender-blue: #dbd3f6;
 $dark-slate-blue: #463a82;
 $jonquil: #ffd33f;
 $paradise-pink: #f04770;
+$dark-turquoise: #4fc9ce;
 $ghost-white: #f5f5f9;
 $jet: #38373a;
 //Bulma colors overwrite
 $primary: $medium-purple;
 $primary-light: $lavender-blue;
 $primary-dark: $dark-slate-blue;
+$success: $dark-turquoise;
 $warning: $jonquil;
 $danger: $paradise-pink;
 $light: $ghost-white;
