--- a/public/sass/partials/_form.scss
+++ b/public/sass/partials/_form.scss
@@ -67,3 +67,7 @@ label.pt-0 {
 label[for="day"] {
   min-width: 6.5rem !important;
 }
+img.illustration {
+  min-height: 30vh;
+  max-height: 320px;
+}
