Added custom icons & ionicons cdn script

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -29,6 +29,7 @@
 @import "partials/_misc";
 @import "partials/steps";
 @import "partials/switch";
+@import "partials/icons";
 
 /* Own partials */
 @import "partials/_flashes";
