--- a/views/layout.pug
+++ b/views/layout.pug
@@ -37,3 +37,4 @@ block doc-header
     block scripts
       script(src=`https://maps.googleapis.com/maps/api/js?key=${process.env.MAP_KEY}&libraries=places`)
       script(src="/javascripts/pantree-app.js")
+      script(src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js")
