--- a/views/donations.pug
+++ b/views/donations.pug
@@ -5,9 +5,9 @@ block prepend content
 block append content
     section.section.is-main-section
       .tile.is-ancestor
-        +overviewTile('Claimed', '5.2 kg', 'placeholder')
-        +overviewTile('Available', '6.9 kg', 'placeholder')
-        +overviewTile('Collected', '2 of 6', 'placeholder')
+        +overviewTile('Collected', '2 of 6', 'shopping-bag')
+        +overviewTile('Claimed', '5.2 kg', 'box')
+        +overviewTile('Available', '6.9 kg', 'fruit-apple')
       .card.has-table.has-mobile-sort-spaced
         header.card-header
           p.card-header-title Donations
