--- a/views/mixins/_overviewTile.pug
+++ b/views/mixins/_overviewTile.pug
@@ -9,5 +9,5 @@ mixin overviewTile(title, stat, icon)
                             h1.title.has-text-weight-semibold.is-size-3= `${stat}`
                     .level-item.has-widget-icon
                         .is-widget-icon
-                            span.icon.has-text-primary.is-large O
-                                // i.icon
+                            span.icon.is-medium.is-left
+                                ion-icon( class="xx-large is-primary" src=`/icons/${icon}.svg`)
