added donationController methods and map widget

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -27,9 +27,10 @@
 @import "partials/_modal";
 @import "partials/_footer";
 @import "partials/_misc";
-@import "partials/steps";
-@import "partials/switch";
-@import "partials/icons";
+@import "partials/_steps";
+@import "partials/_switch";
+@import "partials/_icons";
+@import "partials/_map";
 
 /* Own partials */
 @import "partials/_flashes";
