--- a/views/donations.pug
+++ b/views/donations.pug
@@ -1,4 +1,8 @@
 extend dashboard
+
+block  header
+  +navbarDashboard()
+
 block prepend content
     - var view = '/donations'
     -var title = "Food donations"
@@ -8,6 +12,7 @@ block append content
         +overviewTile('Collected', '2 of 6', 'shopping-bag')
         +overviewTile('Claimed', '5.2 kg', 'box')
         +overviewTile('Available', '6.9 kg', 'fruit-apple')
+      #donations-map(data-lat=account.location.coordinates[0] data-lng=account.location.coordinates[1])
       .card.has-table.has-mobile-sort-spaced
         header.card-header
           p.card-header-title Donations
@@ -65,4 +70,8 @@ block append content
                 .level-right
                   .level-item
                     small Page 1 of 3
+
+block prepend scripts
+    script(src=`https://maps.googleapis.com/maps/api/js?key=${process.env.MAP_KEY}&libraries=places`)
+    script(type="module" src="/dist/js/mapHandler.js")
 
