--- a/public/sass/partials/_theme-default.scss
+++ b/public/sass/partials/_theme-default.scss
@@ -81,8 +81,9 @@ $modal-card-head-border-bottom: 1px solid $white-ter;
 $modal-card-foot-border-top: 0;
 
 /* Modal card: specifics */
-$modal-card-width: 40vw;
-$modal-card-width-mobile: 90vw;
+$modal-card-width: 720px;
+$modal-card-width-tablet: 80vw;
+$modal-card-width-mobile: 100vw;
 $modal-card-foot-background-color: $white-ter;
 
 /* Notification: Bulma override */
