--- a/views/account.pug
+++ b/views/account.pug
@@ -1,21 +1,27 @@
-extends dashboard 
+extends layout
 
-block primary
-  .card
-    .card-content
-      form.container.is-max-desktop(action="/account" method="POST")
-       .field 
-        label.label Name
-        .control.has-icons-left 
-          input.input(type="text" value=user.name name='name' )
-          span.icon.is-small.is-left 
-            i.fas.fas-user
-      .field 
-        label.label Email 
-        .control.has-icons-left 
-          input.input(type="text" value=user.email name='email' )
-          span.icon.is-small.is-left 
-            i.fas.fas-user
-      .field 
-        .control 
-          button.button.is-medium.is-fullwidth.is-primary(type="submit" value="Update My Account") Update Account
+block content
+  .columns.is-centered.is-vcentered.is-full-height
+    .column.is-three-quarters.is-two-fifths-widescreen
+      .card
+        .card-content
+          form.container.is-max-desktop(action="/account" method="POST")
+            h3.title.is-3.form-title Edit Profile
+            hr
+            .field
+              label.label(for='name') Full Name
+              .control.has-icons-left
+                  input.input(type="text" placeholder="Enter your full name" name='name' value=user.name)
+                  span.icon.is-small.is-left
+                      ion-icon(src='/icons/user.svg')
+            .field
+              label.label Email
+              .control.has-icons-left
+                input.input(type="text" placeholder="Enter your email address" name='email' value=user.email)
+                span.icon.is-small.is-left
+                  ion-icon(src='/icons/mail.svg')
+            hr
+            .field
+              .control
+                button.button.is-medium.is-fullwidth.is-primary(type="submit" value="Update My Account") Update Account
+      a(href=`/donations/${user.id}`) ⟵ Back to dashboard
