--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -17,7 +17,7 @@ block content
         - var quickActions = establishmentType === 'Fridge' ? h.coordinatorMenu[1] : h.businessMenu[1]
         each item, index in menu
           li
-            a.has-icon.is-flex.is-align-items-center(href=item.slug class=(view === item.slug ? "is-active" : undefined))
+            a.has-icon.is-flex.is-align-items-center(href=`${item.slug}/${user.id}` class=(view === item.slug ? "is-active" : undefined))
               span.icon.is-small.is-left
                 ion-icon(src=`/icons/${item.icon}.svg`)
               span.menu-item-label.has-text-weight-semibold #{item.title}
@@ -25,7 +25,7 @@ block content
       ul.menu-list
         each item in quickActions
           li
-            a.has-icon(href=item.slug )
+            a.has-icon.is-flex.is-align-items-center(href=`${item.slug}/${user.id}` class=(view === item.slug ? "is-active" : undefined))
               span.icon.is-small.is-left
                 ion-icon(src=`/icons/${item.icon}.svg`)
               span.menu-item-label.has-text-weight-semibold #{item.title}
