--- a/views/mixins/_donationTable.pug
+++ b/views/mixins/_donationTable.pug
@@ -1,7 +1,7 @@
 mixin donationTable(donations = {}, pages = 0)
   .card.has-table.has-mobile-sort-spaced
           header.card-header
-            p.card-header-title Donations
+            p.card-header-title Available donations
           .card-content
             .b-table.has-pagination
               .table-wrapper.has-mobile-cards
