added donation form and back-end validation

--- a/views/index.pug
+++ b/views/index.pug
@@ -22,7 +22,7 @@ block content
                 | At vero eos et accusam et justo duo dolores
               button.button.is-primary.is-large.is-hidden-touch Discover more
               button.button.is-primary.is-medium.is-hidden-desktop Discover more
-            .column.is-three-fifths-fullhd
+            .column.is-three-fifths-fullhd.is-half-desktop
               img.hero-illustration(src="heroIllustration.svg")
   +sectionTitle('Our goals')
   .section.has-text-centered
