--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -31,6 +31,7 @@
 @import "partials/_switch";
 @import "partials/_icons";
 @import "partials/_map";
+@import "partials/_tags";
 
 /* Own partials */
 @import "partials/_flashes";
