Updated addDonation method to save data

--- a/views/mixins/_donationForm.pug
+++ b/views/mixins/_donationForm.pug
@@ -37,7 +37,7 @@ mixin donationForm()
                         .field
                             label.label Phone
                             .control.has-icons-left
-                                input.input(type="tel" name='contact[phonenumber]')
+                                input.input(type="text" name='contact[phoneNumber]')
                                 span.icon.is-small.is-left
                                     ion-icon(src='/icons/phone.svg')
                         hr
