--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ block doc-header
       link(rel='stylesheet', href='/dist/css/style.css')
       //- link(rel="shortcut icon" type="image/png" href="/images/icons/favicon.png")
       meta(name="viewport" content="width=device-width, initial-scale=1")
+      block additionalScripts
     body
       block header
         if user
